Fix spacing issue?

--- a/css/theme.css
+++ b/css/theme.css
@@ -15,6 +15,10 @@ h1, h2, p {
   font-family: "Verdana";
 }
 
+#novspace {
+  line-height: 2px;
+}
+
 .centerDiv {
   margin: auto;
   width: 50%;
